# company_researcher

./: pyproject.toml
src/company_researcher/: crew.py  main.py
src/company_researcher/config/: agents.yaml  tasks.yaml
